bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_result_query_wrong_generic_kind.stderr
error: Invalid pezpallet::storage, unexpected generic argument kind, expected a type path to a `PalletError` enum variant, found `'static`
  --> tests/pezpallet_ui/storage_result_query_wrong_generic_kind.rs:35:56
   |
35 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery<'static>>;
   |                                                           ^^^^^^^
